Off-canvas menu: Fix .nice-header-form behavior on iPhone

--- a/src/elements/_header.scss
+++ b/src/elements/_header.scss
@@ -541,7 +541,6 @@ body {
             padding: 0 20px;
             background-color: lighten($color-accent, 15%);
             position: fixed;
-            top: 0;
             width: calc(100% - 60px);
             z-index: 6;
 
